# Ejercicio-de-Pareja

./: CMakeLists.txt  README.md  funciones.cpp  funciones.h  main.cpp  nombre_edad.cpp  nombre_edad.h
Ejercicio2/: Instrucciones de prueba.cpp  Operadores.cpp
Ejercicio4/: CMakeLists.txt  Declaracion y uso de arrays.cpp
untitled2/: Ambito de las variables.cpp  CMakeLists.txt  Declaracion dentro de un bloque.cpp  Declaración de variables globales (fuera de las funciones).cpp  Sintaxis de declaracion dentro de una funcion.cpp  Tipos de datos.cpp  main.cpp
untitled3/: Bucle do.cpp  Bucle while.cpp  CMakeLists.txt  Instrucciones de bucle (for).cpp  Instrucciones de prueba.cpp  Instrucciones de salto.cpp  Operadores.cpp
