cmake_minimum_required(VERSION 3.26)
project(untitled3)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled3 main.cpp
        "Instrucciones de prueba.cpp"
        Operadores.cpp
        "Instrucciones de bucle (for).cpp"
        "Bucle while.cpp"
        "Bucle do.cpp"
        "Instrucciones de salto.cpp"
)
